<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrabble</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="client_name">Scrabble</string>
    <string name="text_name">Name:</string>
    <string name="text_age">Age:</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_age">Enter your age</string>
    <string name="button_joinGame">Join game</string>
    <string name="button_createGame">Create game</string>
    <string name="text_yourTiles">Your Tiles (tap to place)</string>
    <string name="text_my_turn">It is currently your turn!</string>
    <string name="text_not_my_turn">It is not your turn!</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="text_gameName">Game name:</string>
    <string name="text_gameAvatar">Game avatar:</string>
    <string name="text_playerAvatar">Player avatar:</string>
	<string name="text_numPlayers">Number of players:</string>
    <string name="hint_gameName">Enter a game name</string>
    <string name="select_server">Select a server to join or create a new one:</string>
    <string name="hint_numPlayers">Max 4</string>
    <string name="text_players">Players:</string>
    
</resources>
