<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="scrabble.rabble.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scrollView"
            android:layout_above="@+id/scrollView"
            android:layout_marginTop="20dp"
            android:text="@string/select_server"/>
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true" >

            <LinearLayout
                android:id="@+id/linearLayout_servers"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/button_joinGame"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/scrollView"
            android:layout_below="@+id/scrollView"
            android:layout_marginTop="10dp"
            android:onClick="joinGame"
            android:text="@string/button_joinGame" />

        <Button
            android:id="@+id/button_createGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/scrollView"
            android:layout_below="@+id/scrollView"
            android:layout_marginTop="10dp"
            android:onClick="createGame"
            android:text="@string/button_createGame" />
    </RelativeLayout>

</FrameLayout>